--- a/LivingDesign/View/History.storyboard
+++ b/LivingDesign/View/History.storyboard
@@ -27,24 +27,23 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BT-su-UDZ">
-                                                    <rect key="frame" x="20" y="7" width="103" height="134"/>
+                                                    <rect key="frame" x="20" y="41" width="103" height="66"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="1BT-su-UDZ" secondAttribute="height" multiplier="103:100" id="8uI-lT-XXF"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="103" id="b7A-RH-xwY"/>
                                                         <constraint firstAttribute="width" constant="103" id="uYe-Ms-bSP"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfq-Ax-Zn2">
-                                                    <rect key="frame" x="143" y="21" width="47.5" height="21"/>
+                                                    <rect key="frame" x="143" y="41" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="uau-wU-YPY"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25Y-ix-QK3">
-                                                    <rect key="frame" x="143" y="52" width="183" height="20"/>
+                                                    <rect key="frame" x="143" y="72" width="183" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="cMm-Bt-iye"/>
                                                     </constraints>
@@ -53,28 +52,39 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="QLN-Hd-Zu0">
-                                                    <rect key="frame" x="143" y="93" width="36" height="35"/>
+                                                    <rect key="frame" x="143" y="98" width="36" height="35"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="35" id="8yX-5z-Ks6"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lmk-8d-Hbs">
+                                                    <rect key="frame" x="25" y="11" width="80" height="26.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="wqV-55-uRS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="1BT-su-UDZ" firstAttribute="leading" secondItem="KJ1-7e-e7F" secondAttribute="leadingMargin" id="2QO-EP-17w"/>
-                                                <constraint firstAttribute="bottom" secondItem="QLN-Hd-Zu0" secondAttribute="bottom" constant="20" id="2nE-D4-ymK"/>
-                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="-4" id="6bi-OO-Gk2"/>
-                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="10" id="6wk-Py-Izd"/>
+                                                <constraint firstItem="Lmk-8d-Hbs" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" id="2du-3s-7qV"/>
+                                                <constraint firstAttribute="bottom" secondItem="QLN-Hd-Zu0" secondAttribute="bottom" constant="15" id="2nE-D4-ymK"/>
+                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="30" id="6wk-Py-Izd"/>
                                                 <constraint firstItem="25Y-ix-QK3" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="8Yk-8D-H0s"/>
                                                 <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="OJv-oY-xfg"/>
                                                 <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="OLv-Zf-SSP"/>
                                                 <constraint firstItem="QLN-Hd-Zu0" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="Wcn-gz-tM6"/>
-                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="YSd-gz-XY3"/>
+                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="30" id="aYI-PY-03e"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="25Y-ix-QK3" secondAttribute="trailing" constant="28" id="gpR-Pj-gVD"/>
                                                 <constraint firstItem="25Y-ix-QK3" firstAttribute="top" secondItem="Kfq-Ax-Zn2" secondAttribute="bottom" constant="10" id="qz2-mT-QUz"/>
+                                                <constraint firstItem="Lmk-8d-Hbs" firstAttribute="leading" secondItem="KJ1-7e-e7F" secondAttribute="leadingMargin" constant="5" id="yfT-HC-jEQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="dateLabel" destination="25Y-ix-QK3" id="pkl-Zc-cR8"/>
+                                            <outlet property="genreLabel" destination="Lmk-8d-Hbs" id="wQe-B4-jaG"/>
                                             <outlet property="nameLabel" destination="Kfq-Ax-Zn2" id="wfH-8F-2Yj"/>
                                             <outlet property="starImageView" destination="QLN-Hd-Zu0" id="0ad-a7-jql"/>
                                             <outlet property="thumbnailImageView" destination="1BT-su-UDZ" id="5OP-1T-KFc"/>
